refactor(livros): separar DTOs de requisição/resposta e ajustar testes