@@ -1,6 +1,7 @@
 package com.senacsp.projetosemestral.bibliotecapessoal.aplication.service;
 
-import com.senacsp.projetosemestral.bibliotecapessoal.adapter.dto.BookDto;
+import com.senacsp.projetosemestral.bibliotecapessoal.adapter.dto.BookRequestDto;
+import com.senacsp.projetosemestral.bibliotecapessoal.adapter.dto.BookResponseDto;
 import com.senacsp.projetosemestral.bibliotecapessoal.aplication.library_data_manager.CatalogManager;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -23,11 +24,23 @@ class BookServiceTest {
     @InjectMocks
     private BookService bookService;
 
-    private BookDto bookDto;
+    private BookRequestDto requestDto;
+    private BookResponseDto responseDto;
 
     @BeforeEach
     void setUp() {
-        bookDto = BookDto.builder()
+        requestDto = BookRequestDto.builder()
+                .titulo("The Last Kingdom")
+                .autor("Edward Stone")
+                .isbn("978-85-0000-000-0")
+                .anoPublicacao(2024)
+                .genero("Fantasy")
+                .quantidadePaginas(512)
+                .disponivel(true)
+                .build();
+
+        responseDto = BookResponseDto.builder()
+                .id("1")
                 .titulo("The Last Kingdom")
                 .autor("Edward Stone")
                 .isbn("978-85-0000-000-0")
@@ -40,29 +53,33 @@ class BookServiceTest {
 
     @Test
     void shouldRegisterBook() {
-        when(catalogManager.catalog(bookDto))
-                .thenReturn(bookDto);
+        when(catalogManager.catalog(requestDto))
+                .thenReturn(responseDto);
 
-        BookDto result = bookService.register(bookDto);
+        BookResponseDto result =
+                bookService.register(requestDto);
 
         assertNotNull(result);
-        assertEquals(bookDto.getTitulo(), result.getTitulo());
+        assertEquals("1", result.getId());
+        assertEquals(requestDto.getTitulo(), result.getTitulo());
 
-        verify(catalogManager).catalog(bookDto);
+        verify(catalogManager).catalog(requestDto);
     }
 
     @Test
     void shouldReturnCatalog() {
-        List<BookDto> catalog = List.of(bookDto);
+        List<BookResponseDto> catalog =
+                List.of(responseDto);
 
         when(catalogManager.getCatalog())
                 .thenReturn(catalog);
 
-        List<BookDto> result = bookService.list();
+        List<BookResponseDto> result =
+                bookService.list();
 
         assertNotNull(result);
         assertEquals(1, result.size());
-        assertEquals("The Last Kingdom", result.get(0).getTitulo());
+        assertEquals("The Last Kingdom", result.getFirst().getTitulo());
 
         verify(catalogManager).getCatalog();
     }
@@ -70,27 +87,29 @@ class BookServiceTest {
     @Test
     void shouldReturnBookById() {
         when(catalogManager.getBookDetails("1"))
-                .thenReturn(bookDto);
+                .thenReturn(responseDto);
 
-        BookDto result = bookService.getById("1");
+        BookResponseDto result =
+                bookService.getById("1");
 
         assertNotNull(result);
-        assertEquals(bookDto.getTitulo(), result.getTitulo());
+        assertEquals(responseDto.getTitulo(), result.getTitulo());
 
         verify(catalogManager).getBookDetails("1");
     }
 
     @Test
     void shouldUpdateBookById() {
-        when(catalogManager.updateInfo("1", bookDto))
-                .thenReturn(bookDto);
+        when(catalogManager.updateInfo("1", requestDto))
+                .thenReturn(responseDto);
 
-        BookDto result = bookService.updateById("1", bookDto);
+        BookResponseDto result =
+                bookService.updateById("1", requestDto);
 
         assertNotNull(result);
-        assertEquals(bookDto.getTitulo(), result.getTitulo());
+        assertEquals(responseDto.getTitulo(), result.getTitulo());
 
-        verify(catalogManager).updateInfo("1", bookDto);
+        verify(catalogManager).updateInfo("1", requestDto);
     }
 
     @Test
